sourceforge (2.5-23+) unstable; urgency=low

  * nothing yet 

 -- Christian Bayle <bayle@aist.enst.fr>  Fri,  1 Feb 2002 23:45:56 +0100

sourceforge (2.5-23) unstable; urgency=low

  * [Roland] Fixed the .../home/users/<user>.incoming bug (erroneous
    directories were created).
  * [Roland] Included documentation files per request (closes: #130219).

 -- Roland Mas <lolando@debian.org>  Mon, 28 Jan 2002 10:52:06 +0100

sourceforge (2.5-22) unstable; urgency=low

  * [Roland] Replaced a call to /etc/init.d/bind9 restart by a (more
    appropriate) reload.  Used the policy-defined invoke-rc.d, too.
  * [Roland] Fixed dependencies to correctly handle apache-ssl and
    exim-tls (closes: #128345).

 -- Roland Mas <lolando@debian.org>  Fri, 11 Jan 2002 11:05:03 +0100

sourceforge (2.5-21) unstable; urgency=low

  * [Roland] Delete temporary LDIF files created by cronjob (closes:
    #127636, #127641).

 -- Roland Mas <lolando@debian.org>  Fri,  4 Jan 2002 11:44:30 +0100

sourceforge (2.5-20) unstable; urgency=low

  * [Roland] Fixed thinko in 2.5-19.  I'll stop uploading things for
    today, sorry for the noise.

 -- Roland Mas <lolando@debian.org>  Fri, 28 Dec 2001 16:28:42 +0100

sourceforge (2.5-19) unstable; urgency=low

  * [Roland] user_home.php: Fixed email addresses on /users/<blah>.
  * [Roland] sendmessage.php: Fixed a few typos.

 -- Roland Mas <lolando@debian.org>  Fri, 28 Dec 2001 14:44:49 +0100

sourceforge (2.5-18) unstable; urgency=low

  * [Roland] Fixed speling error in Description: field (closes: #125372).
  * [Roland] Added dependencies on packages providing the vi editor
    (closes: #124326).  I hope I got them all.
  * [Roland] deb-specific/install-exim.sh: Fixed LDAP queries to match the
    real attribute names from the new schema introduced in 2.5-15.

 -- Roland Mas <lolando@debian.org>  Fri, 28 Dec 2001 10:12:30 +0100

sourceforge (2.5-17) unstable; urgency=low

  * [Roland] Fixed a lintian error.